fixed white box in sub navi item when dark mode is active

--- a/src/app/shared/components/sub-navi-item/sub-navi-item.component.scss
+++ b/src/app/shared/components/sub-navi-item/sub-navi-item.component.scss
@@ -82,7 +82,7 @@
 @media (prefers-color-scheme: dark) {
   .sub-navi-item {
     li a {
-      .icon, .content .title, {
+      .icon, .content .title, .content.no-meta:before {
         background: #212121;
         color: rgba(255, 255, 255, 0.8);
       }
